@startuml
'https://plantuml.com/class-diagram

class People{
+ show()
}

class Finery{
# People people
+ show()
+ decorate(People people)
}


class Hoodie{
+ show()
}
class Jeans{
+ show()
}
class TShirt{
+ show()
}

People <|-- Finery
Finery "1" *-- "1" People
Finery <|-- Hoodie
Finery <|-- Jeans
Finery <|-- TShirt

@enduml